Hotfix for overflowing image issue

--- a/src/components/programs/ProgramsPT.module.css
+++ b/src/components/programs/ProgramsPT.module.css
@@ -4,6 +4,7 @@
     padding: 3rem 0;
     scroll-snap-align: start;
     height: 100vh;
+    width: 100%;
 }
 
 .intro__content--info {
@@ -26,10 +27,10 @@
 }
 
 .intro__content--image img {
-    width: 60%;
-    max-width: 100%;
-    height: auto;
+    height: auto; /* Maintain aspect ratio */
+    max-width: 60%; /* Prevent it from exceeding the bounds of its container */
 }
+
 
 
 
